Rewrote CSV adapter to use a lucene index as backend