@@ -31,10 +31,9 @@ import eu.binjr.common.text.BinaryPrefixFormatter;
 import eu.binjr.core.data.adapters.*;
 import eu.binjr.core.data.exceptions.CannotInitializeDataAdapterException;
 import eu.binjr.core.data.exceptions.DataAdapterException;
-import eu.binjr.core.data.indexes.Indexes;
-import eu.binjr.core.data.indexes.SearchHit;
-import eu.binjr.core.data.indexes.Searchable;
-import eu.binjr.core.data.indexes.parser.EventParser;
+import eu.binjr.core.data.indexes.*;
+import eu.binjr.core.data.indexes.parser.EventFormat;
+import eu.binjr.sources.logs.data.parsers.LogEventFormat;
 import eu.binjr.core.data.indexes.parser.profile.CustomParsingProfile;
 import eu.binjr.core.data.indexes.parser.profile.ParsingProfile;
 import eu.binjr.core.data.timeseries.TimeSeriesProcessor;
@@ -49,6 +48,7 @@ import org.eclipse.fx.ui.controls.tree.FilterableTreeItem;
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
+import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -63,7 +63,6 @@ import java.util.stream.Collectors;
  * @author Frederic Thevenet
  */
 public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements ProgressAdapter<SearchHit> {
-    private static final String LOG_FILE_INDEX = "logFileIndex";
     private static final Logger logger = Logger.create(LogsDataAdapter.class);
     private static final Gson gson = new Gson();
     private static final String DEFAULT_PREFIX = "[Logs]";
@@ -72,22 +71,24 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
     private static final String FOLDER_FILTERS_PARAM_NAME = "folderFilters";
     private static final String EXTENSIONS_FILTERS_PARAM_NAME = "fileExtensionsFilters";
     private static final String PARSING_PROFILE_PARAM_NAME = "parsingProfile";
-    private static final BooleanProperty NO_CANCELLATION_REQUESTED = ReadOnlyBooleanWrapper.booleanProperty(new SimpleBooleanProperty(false));
-    private final String sourceNamePrefix;
+    private static final String LOG_FILE_ENCODING = "LOG_FILE_ENCODING";
+    private static final Property<IndexingStatus> INDEXING_OK = new ReadOnlyObjectWrapper(new SimpleObjectProperty<>(IndexingStatus.OK));
 
-    private final Map<String, Boolean> indexedFiles = new HashMap<>();
+    private final String sourceNamePrefix;
+    private final Map<String, IndexingStatus> indexedFiles = new HashMap<>();
     private final BinaryPrefixFormatter binaryPrefixFormatter = new BinaryPrefixFormatter("###,###.## ");
     private final MostRecentlyUsedList<String> defaultParsingProfiles =
             UserHistory.getInstance().stringMostRecentlyUsedList("defaultParsingProfiles", 100);
     private final MostRecentlyUsedList<String> userParsingProfiles =
             UserHistory.getInstance().stringMostRecentlyUsedList("userParsingProfiles", 100);
+    private final Charset encoding;
     private Path rootPath;
-    private Searchable index;
+    private Indexable index;
     private FileSystemBrowser fileBrowser;
     private String[] folderFilters;
     private String[] fileExtensionsFilters;
     private ParsingProfile parsingProfile;
-    private EventParser parser;
+    private EventFormat parser;
     private ZoneId zoneId;
 
     /**
@@ -98,6 +99,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
     public LogsDataAdapter() throws DataAdapterException {
         super();
         zoneId = ZoneId.systemDefault();
+        encoding = StandardCharsets.UTF_8;
         sourceNamePrefix = DEFAULT_PREFIX;
     }
 
@@ -115,7 +117,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
                            String[] folderFilters,
                            String[] fileExtensionsFilters,
                            ParsingProfile profile) throws DataAdapterException {
-        this(DEFAULT_PREFIX, rootPath, zoneId, folderFilters, fileExtensionsFilters, profile);
+        this(DEFAULT_PREFIX, rootPath, zoneId, StandardCharsets.UTF_8, folderFilters, fileExtensionsFilters, profile);
     }
 
     /**
@@ -134,10 +136,48 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
                            String[] folderFilters,
                            String[] fileExtensionsFilters,
                            ParsingProfile profile) throws DataAdapterException {
+        this(sourcePrefix, rootPath, zoneId, StandardCharsets.UTF_8, folderFilters, fileExtensionsFilters, profile);
+    }
+
+    /**
+     * Initializes a new instance of the {@link LogsDataAdapter} class from the provided {@link Path}
+     *
+     * @param rootPath              the {@link Path} from which to load content.
+     * @param folderFilters         a list of names of folders to inspect for content.
+     * @param fileExtensionsFilters a list of file extensions to inspect for content.
+     * @param profile               the parsing profile to use.
+     * @throws DataAdapterException if an error occurs initializing the adapter.
+     */
+    public LogsDataAdapter(Path rootPath,
+                           ZoneId zoneId,
+                           Charset encoding,
+                           String[] folderFilters,
+                           String[] fileExtensionsFilters,
+                           ParsingProfile profile) throws DataAdapterException {
+        this(DEFAULT_PREFIX, rootPath, zoneId, encoding, folderFilters, fileExtensionsFilters, profile);
+    }
+
+    /**
+     * Initializes a new instance of the {@link LogsDataAdapter} class from the provided {@link Path}
+     *
+     * @param sourcePrefix          the name to prepend the source with.
+     * @param rootPath              the {@link Path} from which to load content.
+     * @param folderFilters         a list of names of folders to inspect for content.
+     * @param fileExtensionsFilters a list of file extensions to inspect for content.
+     * @param profile               the parsing profile to use.
+     * @throws DataAdapterException if an error occurs initializing the adapter.
+     */
+    public LogsDataAdapter(String sourcePrefix,
+                           Path rootPath,
+                           ZoneId zoneId,
+                           Charset encoding,
+                           String[] folderFilters,
+                           String[] fileExtensionsFilters,
+                           ParsingProfile profile) throws DataAdapterException {
         super();
         this.sourceNamePrefix = sourcePrefix;
         this.rootPath = rootPath;
-
+        this.encoding = encoding;
         Map<String, String> params = new HashMap<>();
         initParams(rootPath, zoneId, folderFilters, fileExtensionsFilters, profile);
     }
@@ -145,6 +185,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
     @Override
     public Map<String, String> getParams() {
         Map<String, String> params = new HashMap<>();
+        params.put(LOG_FILE_ENCODING, getEncoding());
         params.put(ROOT_PATH_PARAM_NAME, rootPath.toString());
         params.put(ZONE_ID_PARAM_NAME, zoneId.toString());
         params.put(FOLDER_FILTERS_PARAM_NAME, gson.toJson(folderFilters));
@@ -183,7 +224,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
         this.folderFilters = folderFilters;
         this.fileExtensionsFilters = fileExtensionsFilters;
         this.parsingProfile = parsingProfile;
-        this.parser = new EventParser(parsingProfile, getTimeZoneId());
+        this.parser = new LogEventFormat(parsingProfile, getTimeZoneId(), encoding);
     }
 
     @Override
@@ -273,11 +314,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
     @Override
     public TimeRange getInitialTimeRange(String path, List<TimeSeriesInfo<SearchHit>> seriesInfo) throws DataAdapterException {
         try {
-            //  ensureIndexed(seriesInfo, progress, false, cancellationRequested);
-            return index.getTimeRangeBoundaries(
-                    seriesInfo.stream()
-                            .map(this::getPathFacetValue)
-                            .collect(Collectors.toList()), getTimeZoneId());
+            return index.getTimeRangeBoundaries(seriesInfo.stream().map(this::getPathFacetValue).toList(), getTimeZoneId());
         } catch (IOException e) {
             throw new DataAdapterException("Error retrieving initial time range", e);
         }
@@ -291,7 +328,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
                                                                                     Instant end,
                                                                                     List<TimeSeriesInfo<SearchHit>> seriesInfo,
                                                                                     boolean bypassCache) throws DataAdapterException {
-        return loadSeries(path, seriesInfo, bypassCache ? ReloadPolicy.ALL : ReloadPolicy.UNLOADED, null, NO_CANCELLATION_REQUESTED);
+        return loadSeries(path, seriesInfo, bypassCache ? ReloadPolicy.ALL : ReloadPolicy.UNLOADED, null, INDEXING_OK);
     }
 
     @Override
@@ -299,7 +336,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
                                                                                      List<TimeSeriesInfo<SearchHit>> seriesInfo,
                                                                                      ReloadPolicy reloadPolicy,
                                                                                      DoubleProperty progress,
-                                                                                     BooleanProperty cancellationRequested) throws DataAdapterException {
+                                                                                     Property<IndexingStatus> indexingStatus) throws DataAdapterException {
         Map<TimeSeriesInfo<SearchHit>, TimeSeriesProcessor<SearchHit>> data = new HashMap<>();
         try {
             ensureIndexed(seriesInfo.stream()
@@ -308,7 +345,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
                             .toList(),
                     progress,
                     reloadPolicy,
-                    cancellationRequested);
+                    indexingStatus);
         } catch (Exception e) {
             throw new DataAdapterException("Error fetching logs from " + path, e);
         }
@@ -318,13 +355,14 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
     private synchronized void ensureIndexed(List<LogFileSeriesInfo> seriesInfo,
                                             DoubleProperty progress,
                                             ReloadPolicy reloadPolicy,
-                                            BooleanProperty cancellationRequested) throws IOException {
+                                            Property<IndexingStatus> indexingStatus) throws IOException {
         final var toDo = seriesInfo.stream()
                 .filter(p -> switch (reloadPolicy) {
-                      case ALL -> true;
-                      case UNLOADED -> !indexedFiles.containsKey(getPathFacetValue(p));
-                      case INCOMPLETE -> indexedFiles.getOrDefault(getPathFacetValue(p), true);
-                  })
+                    case ALL -> true;
+                    case UNLOADED -> !indexedFiles.containsKey(getPathFacetValue(p));
+                    case INCOMPLETE ->
+                            indexedFiles.getOrDefault(getPathFacetValue(p), IndexingStatus.CANCELED) == IndexingStatus.CANCELED;
+                })
                 .toList();
         if (toDo.size() > 0) {
             final long totalSizeInBytes = toDo.stream()
@@ -355,8 +393,8 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
                             (i == toDo.size() - 1), // commit if last file
                             parser,
                             charRead,
-                            cancellationRequested);
-                    indexedFiles.put(key, cancellationRequested.get());
+                            indexingStatus);
+                    indexedFiles.put(key, indexingStatus.getValue());
                 }
             } finally {
                 // remove listener
@@ -365,12 +403,12 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
                     Dialogs.runOnFXThread(() -> progress.setValue(-1));
                 }
                 // reset cancellation request
-                cancellationRequested.setValue(false);
+                indexingStatus.setValue(IndexingStatus.OK);
             }
         }
         // Update loading status for series
         for (var series : seriesInfo) {
-            series.setLoadIncomplete(indexedFiles.get(getPathFacetValue(series)));
+            series.setIndexingStatus(indexedFiles.get(getPathFacetValue(series)));
         }
     }
 
@@ -389,16 +427,16 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
         return LogFileSeriesInfo.makePathFacetValue(parsingProfile, p);
     }
 
-    private EventParser getEventParser(TimeSeriesInfo<?> p) {
+    private EventFormat getEventParser(TimeSeriesInfo<?> p) {
         if (p instanceof LogFileSeriesInfo lfsi && lfsi.getParsingProfile() != null) {
-            return new EventParser(lfsi.getParsingProfile(), getTimeZoneId());
+            return new LogEventFormat(lfsi.getParsingProfile(), getTimeZoneId(), encoding);
         }
         return parser;
     }
 
     @Override
     public String getEncoding() {
-        return "utf-8";
+        return encoding.name();
     }
 
     @Override
@@ -416,7 +454,7 @@ public class LogsDataAdapter extends BaseDataAdapter<SearchHit> implements Progr
         try {
             Indexes.LOG_FILES.release();
         } catch (Exception e) {
-            logger.error("An error occurred while releasing index " + LOG_FILE_INDEX + ": " + e.getMessage());
+            logger.error("An error occurred while releasing index " + Indexes.LOG_FILES.name() + ": " + e.getMessage());
             logger.debug("Stack Trace:", e);
         }
         IOUtils.close(fileBrowser);
